hovering bug on Chrome fixed backface visibility to hidden

--- a/sites/all/themes/mam/css/style.css
+++ b/sites/all/themes/mam/css/style.css
@@ -336,10 +336,14 @@ body.page-collections div.view-content {
 
 html {
   min-height: 100%;
+  border: 10px #fefefe solid; }
+
+* {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  border: 10px #fefefe solid; }
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden; }
 
 body {
   background-color: #f1f2f2; }
